Build StateSerializer StateSerializer does set/save state

--- a/serialize-state/src/app/components/stateSerializer/state.serializer.component.html
+++ b/serialize-state/src/app/components/stateSerializer/state.serializer.component.html
@@ -1,1 +1,6 @@
-State Serializer
+<input [(ngModel)]="childStateJSON" type="text" #stateInput>
+<button type="button" (click)="setState()">set state</button>
+<button type="button" (click)="saveState()">save state</button>
+<div>
+  {{childState | json}}
+</div>
